# DobbyV2

./: Dokumentation  README.md
3D-Modell/: README.md  dobby.dwg  dobby.dxf  dobby.fbx
3D-Modell/AutoCad-Export/: WebGLExportDrawing2.HTML  dobby.HTML
3D-Modell/Bauteile/: SICK TIM551 Halterung.dwg  SICK TIM551.dwg  item Profil 40x40x140.dwg  item Profil 40x40x320.dwg  item Profil 40x40x330.dwg  item Profil 40x40x55.dwg  item Profil 40x40x600.dwg
3D-Modell/Project/: Dobby.iam  Zeichnung1.bak  Zeichnung1.dwg  dobby.dwg
3D-Modell/Project/Bauteile/: frontHolz.ipt  profilItem600item_7000009_Profil_8_40x40_E_L=600_1.ipt
3D-Modell/Project/Komponenten/: k_frontHolz.ipt
App/: README.md  angular-cli.json  package.json
App/e2e/: app.e2e-spec.ts  app.po.ts
App/src/: fonts.css  index.html  styles.css  typings.d.ts
App/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  app.routing.ts
App/src/assets/: virtualjoystick.js
App/transportsystem/: config.xml
App/transportsystem/icon/: icon.psd
App/transportsystem/plugins/: android.json  fetch.json
App/transportsystem/www/: index.html  (+11 more)
Dokumentation/: README.md
Dokumentation/Projektplanung/: Planung.mpp
Raspberry/: README.md
Raspberry/etc/: rc.local
Raspberry/home/pi/Dobby/: CMakeLists.txt  Dobby.c  Dobby.cpp  Frame.cpp  Frame.h  Global.h  IOControl.cpp  IOControl.h  Lin.cpp  Lin.h  LogFiles.cpp  LogFiles.h  Sensor.cpp  Sensor.h  Timer.h  WebSocket.cpp  WebSocket.h  WebSocketKeys.cpp  WebSocketKeys.h  lin.c  lin.cpp  lin.h  sensor.cpp  sensor.h  temp
(+88 files in other folders)
